<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.verlif.idea.singledown.ui.text.NoLinesEditView
            android:id="@+id/login_userName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@color/s_black"
            android:hint="@string/text_user_name"
            android:background="@drawable/bg_login_input"/>

        <com.verlif.idea.singledown.ui.text.NoLinesEditView
            android:id="@+id/login_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/s_black"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:background="@drawable/bg_login_input"/>

        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/s_black"
            android:text="@string/text_login"
            android:enabled="false"
            android:background="@color/s_white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@drawable/img_setting" />

    </RelativeLayout>

</FrameLayout>