<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:background="@drawable/bg_dialog_bottom_context">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dialog_file_img"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/dialog_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/s_black"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/dialog_file_download"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dialog_file_button"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/text_download"
                android:textColor="@color/s_white"
                android:textSize="18sp"
                android:background="@drawable/bg_dialog_bottom_button"/>

            <Button
                android:id="@+id/dialog_file_delete"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dialog_file_button"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/text_delete"
                android:textColor="@color/s_black"
                android:textSize="18sp"
                android:background="@drawable/bg_dialog_bottom_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/dialog_file_rename"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dialog_file_button"
                android:layout_margin="4dp"
                android:text="@string/text_rename"
                android:textColor="@color/s_white"
                android:textSize="18sp"
                android:background="@drawable/bg_dialog_bottom_button"/>

        </LinearLayout>

        <Button
            android:id="@+id/dialog_file_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_file_button"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:text="@string/text_sure"
            android:textColor="@color/s_white"
            android:textSize="18sp"
            android:background="@drawable/bg_dialog_bottom_button"/>

    </LinearLayout>


</LinearLayout>