<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:background="@drawable/bg_dialog_bottom_context">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_progressbar"
            android:textSize="18sp"
            android:textColor="@color/s_black"/>
        <ProgressBar
            android:id="@+id/dialog_downloadPg_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="12dp"
            android:progress="40"
            android:max="100"
            style="@style/Progressbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginEnd="12dp">

            <TextView
                android:id="@+id/dialog_downloadPg_sizeNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="/"/>

            <TextView
                android:id="@+id/dialog_downloadPg_sizeTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/dialog_downloadPg_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel"
                android:textColor="@color/s_black"
                android:background="@color/s_white"/>

            <Button
                android:id="@+id/dialog_downloadPg_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hide"
                android:textColor="@color/s_black"
                android:background="@color/s_white"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>